--- a/index.html
+++ b/index.html
@@ -21,6 +21,35 @@
     </div>
   </div>
 
+  <div class="container">
+    <div class="row align-items-center" style="height: 100vh;">
+      <div class="col-sm-12 border">
+        My Profile
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row align-items-center" style="height: 100vh;">
+      <div class="col-sm-12 border">
+        My Profile
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row align-items-center" style="height: 100vh;">
+      <div class="col-sm-12 border">
+        My Profile
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row align-items-center" style="height: 100vh;">
+      <div class="col-sm-12 border">
+        My Profile
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
